maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:16: error: not found: value Direction
  if (getDirection()==Direction.SOUTH) {
                      ^